--- a/_style.scss
+++ b/_style.scss
@@ -296,7 +296,7 @@ body {
     }
 
     footer {
-        flex-shrink: 0; // Ensures footer maintains its size
+        flex-shrink: 0;
         margin-top: auto;
         width: 80%;
         text-align: center;
